Bug 95437 - FILEOPEN - regression : a document opens slowly
Summary: FILEOPEN - regression : a document opens slowly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.6.1 rc
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.2.0
Keywords: perf, regression
: 96594 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-30 11:00 UTC by Jérôme Bouat
Modified: 2018-02-07 22:18 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
the file whose opening is very slow (320.02 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-10-30 11:00 UTC, Jérôme Bouat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jérôme Bouat 2015-10-30 11:00:07 UTC
Created attachment 120101 [details]
the file whose opening is very slow

I experienced a regression since the 4.1.6.2 version.

I could open the attached file faster with the previous version of Libreoffice.

With 4.3.7.2 version, it requires now 87 seconds (~10 times more ?).

3 other users of my office experienced the same issue (didn't ask to more) with the same OS and hardware.

LO Build ID: 8a35821d8636a03b8bf4e15b48f59794652c68ba

OS : Microsoft Windows XP Professionnel, version 2002, Service Pack 3

Processor : Intel Celeron(R) E3400 2.6GHz
Comment 1 Ákos 2015-10-30 15:06:15 UTC
I test on different versions the open time (i5-4590, 16 gb ram, win81 x64):
4.1 2s
4.2.0.1 8s
4.2.8.2 4s
4.3.0.4 4s
4.3.5.2 4s
4.3.6.1 16s
4.3.6.2 16s
4.3.7.2 16s
5.1.0.0.alpha1 15s

The first presence of bug is in 4.3.6.1.
Comment 2 Buovjaga 2015-10-31 15:49:38 UTC
NEW per comment 1
Comment 3 Robinson Tryon (qubit) 2015-12-09 18:08:27 UTC Comment hidden (obsolete)
Comment 4 Markus Mohrhard 2016-03-26 12:25:30 UTC
I have a fix for this one and related conditional format performance problems.

Let me see how well it works and if I manage to find all bugs that I'm most likely going to introduce.
Comment 5 Commit Notification 2016-03-26 16:02:18 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88a0c7d01b7dfd085a0569030f97cc7de0f0d106

switch to a listener based cond format update, tdf#95437

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Timur 2016-03-28 11:49:48 UTC
4.3.5.2 12s
4.3.6.1 28s
5.1.1.3 25s
5.2+    14s
Tested with master~2016-03-27_09.52.41_LibreOfficeDev_5.2.0.0.alpha0_Win_x86.
Comment 7 Markus Mohrhard 2016-04-08 08:51:13 UTC
*** Bug 96594 has been marked as a duplicate of this bug. ***