switch to a listener based cond format update, tdf#95437

Change-Id: Iaee665a37a9637c40cd02a89a19240ade6e5af37